# MeshCoreTel-firmware

./: .gitignore  404.html  AGENTS.md  README.md  RELEASE.md  build.sh  index.html  mkdocs.yml  platformio.ini  pyproject.toml  release-notes.yml  search.json  sitemap.xml
.github/actions/setup-build-environment/: action.yml
.github/workflows/: build-companion-firmwares.yml  build-companion-wifi-firmwares.yml  build-repeater-firmwares.yml  build-repeater-mqtt-firmwares.yml  build-room-server-firmwares.yml  github-pages.yml  pr-build-check.yml  push-build-check.yml
api/: index.html
boards/: index.html  t_beams3_supreme.json
cli_commands/: index.html
custom-cli/: index.html
docs/: api.md  boards.md  cli_commands.md  custom-cli.md  docs.md  faq.md  index.md  local-builds.md  releases.md  web-panel.md
examples/companion_radio/: MyMesh.cpp  MyMesh.h  main.cpp
examples/simple_repeater/: MyMesh.cpp  MyMesh.h  UITask.cpp  main.cpp
examples/simple_room_server/: MyMesh.cpp  MyMesh.h  main.cpp
examples/simple_sensor/: SensorMesh.cpp  SensorMesh.h
local-builds/: index.html
migration/: index.html
releases/: index.html
src/: Dispatcher.cpp  MeshCore.h
src/helpers/: ArchiveStorage.cpp  ArchiveStorage.h  CommonCLI.cpp  CommonCLI.h  ESP32Board.h  StatsFormatHelper.h  StatsHistory.cpp
src/helpers/mqtt/: JWTHelper.cpp  (+6 more)
variants/eastmesh_mqtt/: platformio.ini
variants/heltec_v3/: HeltecV3Board.h
variants/lilygo_tbeam_1w/: TBeam1WBoard.cpp  TBeam1WBoard.h  platformio.ini  target.cpp  target.h
variants/tenstar_c3/: target.h
web-panel/: index.html
(+5 files in other folders)
