[project]
name = "meshcore-eastmesh"
version = "0.1.0"
description = "Python tooling for EastMesh workflows on top of MeshCore"
requires-python = ">=3.11"
dependencies = [
    "platformio>=6.1.18,<7",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.6.0,<10",
]

[tool.uv]
package = false
